--- a/authorization/src/main/resources/application.properties
+++ b/authorization/src/main/resources/application.properties
@@ -1,8 +1,17 @@
 spring.application.name=authorization
 server.port=9010
 
-# MySQL configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=
+## MySQL configuration
+#spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
+## MySQL configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/suas_db
+spring.datasource.username=suas
+spring.datasource.password=suas
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
